syntax = "proto3";

service AuthServerService {
  rpc AuthorizeToken (UserToken) returns (UserInfo);
}

message UserToken {
  string token = 1;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
}

message UserInfo {
  int64 user_id = 1;
  string email = 2;
  string phone_number = 3;
  string first_name = 4;
  string last_name = 5;
  Gender gender = 6;
}